CCC20192Parser.py
# Generated from CCC20192.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CCC20192Parser ( Parser ):

    grammarFileName = "CCC20192.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'break'", "<INVALID>", 
                     "'int'", "'float'", "'string'", "'['", "']'", "<INVALID>", 
                     "'='", "'print'", "'read'", "'return'", "'if'", "'('", 
                     "')'", "'else'", "'for'", "'new'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'\\'", 
                     "'%'", "<INVALID>", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "SEMICOLON", "OPENBRACE", "CLOSEBRACE", 
                      "BREAK", "IDENT", "INT", "FLOAT", "STRING", "OPENBRACKET", 
                      "CLOSEBRACKET", "INT_CONSTANT", "ATRIB", "PRINT", 
                      "READ", "RETURN", "IF", "OPENPAR", "CLOSEPAR", "ELSE", 
                      "FOR", "NEW", "LESS", "GREATER", "LESS_EQ", "GREATER_EQ", 
                      "EQUALS", "NOT_EQUALS", "PLUS", "MINUS", "MULT", "DIV", 
                      "MODULO", "FLOAT_CONSTANT", "STRING_CONSTANT", "NULL", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_statement1 = 1
    RULE_statement = 2
    RULE_vardecl = 3
    RULE_vartype = 4
    RULE_brackets = 5
    RULE_atribstat = 6
    RULE_atribexpress = 7
    RULE_printstat = 8
    RULE_readstat = 9
    RULE_returnstat = 10
    RULE_ifstat = 11
    RULE_elsestat = 12
    RULE_forstat = 13
    RULE_statelist = 14
    RULE_statelist1 = 15
    RULE_allocexpression = 16
    RULE_bracketexpress = 17
    RULE_expression = 18
    RULE_expression1 = 19
    RULE_signal = 20
    RULE_numexpression = 21
    RULE_arithmetic1 = 22
    RULE_arithsignal1 = 23
    RULE_term = 24
    RULE_arithmetic2 = 25
    RULE_arithsignal2 = 26
    RULE_unaryexpr = 27
    RULE_arithsignal3 = 28
    RULE_factor = 29
    RULE_lvalue = 30

    ruleNames =  [ "program", "statement1", "statement", "vardecl", "vartype", 
                   "brackets", "atribstat", "atribexpress", "printstat", 
                   "readstat", "returnstat", "ifstat", "elsestat", "forstat", 
                   "statelist", "statelist1", "allocexpression", "bracketexpress", 
                   "expression", "expression1", "signal", "numexpression", 
                   "arithmetic1", "arithsignal1", "term", "arithmetic2", 
                   "arithsignal2", "unaryexpr", "arithsignal3", "factor", 
                   "lvalue" ]

    EOF = Token.EOF
    SEMICOLON=1
    OPENBRACE=2
    CLOSEBRACE=3
    BREAK=4
    IDENT=5
    INT=6
    FLOAT=7
    STRING=8
    OPENBRACKET=9
    CLOSEBRACKET=10
    INT_CONSTANT=11
    ATRIB=12
    PRINT=13
    READ=14
    RETURN=15
    IF=16
    OPENPAR=17
    CLOSEPAR=18
    ELSE=19
    FOR=20
    NEW=21
    LESS=22
    GREATER=23
    LESS_EQ=24
    GREATER_EQ=25
    EQUALS=26
    NOT_EQUALS=27
    PLUS=28
    MINUS=29
    MULT=30
    DIV=31
    MODULO=32
    FLOAT_CONSTANT=33
    STRING_CONSTANT=34
    NULL=35
    WHITESPACE=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement1(self):
            return self.getTypedRuleContext(CCC20192Parser.Statement1Context,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CCC20192Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.statement1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CCC20192Parser.StatementContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_statement1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement1" ):
                listener.enterStatement1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement1" ):
                listener.exitStatement1(self)




    def statement1(self):

        localctx = CCC20192Parser.Statement1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement1)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CCC20192Parser.SEMICOLON, CCC20192Parser.OPENBRACE, CCC20192Parser.BREAK, CCC20192Parser.IDENT, CCC20192Parser.INT, CCC20192Parser.FLOAT, CCC20192Parser.STRING, CCC20192Parser.PRINT, CCC20192Parser.READ, CCC20192Parser.RETURN, CCC20192Parser.IF, CCC20192Parser.FOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.statement()
                pass
            elif token in [CCC20192Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(CCC20192Parser.VardeclContext,0)


        def SEMICOLON(self):
            return self.getToken(CCC20192Parser.SEMICOLON, 0)

        def atribstat(self):
            return self.getTypedRuleContext(CCC20192Parser.AtribstatContext,0)


        def printstat(self):
            return self.getTypedRuleContext(CCC20192Parser.PrintstatContext,0)


        def readstat(self):
            return self.getTypedRuleContext(CCC20192Parser.ReadstatContext,0)


        def returnstat(self):
            return self.getTypedRuleContext(CCC20192Parser.ReturnstatContext,0)


        def ifstat(self):
            return self.getTypedRuleContext(CCC20192Parser.IfstatContext,0)


        def forstat(self):
            return self.getTypedRuleContext(CCC20192Parser.ForstatContext,0)


        def OPENBRACE(self):
            return self.getToken(CCC20192Parser.OPENBRACE, 0)

        def statelist(self):
            return self.getTypedRuleContext(CCC20192Parser.StatelistContext,0)


        def CLOSEBRACE(self):
            return self.getToken(CCC20192Parser.CLOSEBRACE, 0)

        def BREAK(self):
            return self.getToken(CCC20192Parser.BREAK, 0)

        def getRuleIndex(self):
            return CCC20192Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CCC20192Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CCC20192Parser.INT, CCC20192Parser.FLOAT, CCC20192Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.vardecl()
                self.state = 69
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.atribstat()
                self.state = 72
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.printstat()
                self.state = 75
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.READ]:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.readstat()
                self.state = 78
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.returnstat()
                self.state = 81
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.IF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                self.ifstat()
                self.state = 84
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.FOR]:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.forstat()
                self.state = 87
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.OPENBRACE]:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.match(CCC20192Parser.OPENBRACE)
                self.state = 90
                self.statelist()
                self.state = 91
                self.match(CCC20192Parser.CLOSEBRACE)
                pass
            elif token in [CCC20192Parser.BREAK]:
                self.enterOuterAlt(localctx, 9)
                self.state = 93
                self.match(CCC20192Parser.BREAK)
                self.state = 94
                self.match(CCC20192Parser.SEMICOLON)
                pass
            elif token in [CCC20192Parser.SEMICOLON]:
                self.enterOuterAlt(localctx, 10)
                self.state = 95
                self.match(CCC20192Parser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(CCC20192Parser.VartypeContext,0)


        def IDENT(self):
            return self.getToken(CCC20192Parser.IDENT, 0)

        def brackets(self):
            return self.getTypedRuleContext(CCC20192Parser.BracketsContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = CCC20192Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.vartype()
            self.state = 99
            self.match(CCC20192Parser.IDENT)
            self.state = 100
            self.brackets()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CCC20192Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(CCC20192Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(CCC20192Parser.STRING, 0)

        def getRuleIndex(self):
            return CCC20192Parser.RULE_vartype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVartype" ):
                listener.enterVartype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVartype" ):
                listener.exitVartype(self)




    def vartype(self):

        localctx = CCC20192Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vartype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CCC20192Parser.INT) | (1 << CCC20192Parser.FLOAT) | (1 << CCC20192Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BracketsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENBRACKET(self):
            return self.getToken(CCC20192Parser.OPENBRACKET, 0)

        def INT_CONSTANT(self):
            return self.getToken(CCC20192Parser.INT_CONSTANT, 0)

        def CLOSEBRACKET(self):
            return self.getToken(CCC20192Parser.CLOSEBRACKET, 0)

        def brackets(self):
            return self.getTypedRuleContext(CCC20192Parser.BracketsContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_brackets

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBrackets" ):
                listener.enterBrackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBrackets" ):
                listener.exitBrackets(self)




    def brackets(self):

        localctx = CCC20192Parser.BracketsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_brackets)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(CCC20192Parser.OPENBRACKET)
                self.state = 105
                self.match(CCC20192Parser.INT_CONSTANT)
                self.state = 106
                self.match(CCC20192Parser.CLOSEBRACKET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(CCC20192Parser.OPENBRACKET)
                self.state = 108
                self.match(CCC20192Parser.INT_CONSTANT)
                self.state = 109
                self.match(CCC20192Parser.CLOSEBRACKET)
                self.state = 110
                self.brackets()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(CCC20192Parser.LvalueContext,0)


        def ATRIB(self):
            return self.getToken(CCC20192Parser.ATRIB, 0)

        def atribexpress(self):
            return self.getTypedRuleContext(CCC20192Parser.AtribexpressContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_atribstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribstat" ):
                listener.enterAtribstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribstat" ):
                listener.exitAtribstat(self)




    def atribstat(self):

        localctx = CCC20192Parser.AtribstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atribstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.lvalue()
            self.state = 115
            self.match(CCC20192Parser.ATRIB)
            self.state = 116
            self.atribexpress()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribexpressContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CCC20192Parser.ExpressionContext,0)


        def allocexpression(self):
            return self.getTypedRuleContext(CCC20192Parser.AllocexpressionContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_atribexpress

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribexpress" ):
                listener.enterAtribexpress(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribexpress" ):
                listener.exitAtribexpress(self)




    def atribexpress(self):

        localctx = CCC20192Parser.AtribexpressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atribexpress)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CCC20192Parser.IDENT, CCC20192Parser.INT_CONSTANT, CCC20192Parser.OPENPAR, CCC20192Parser.PLUS, CCC20192Parser.MINUS, CCC20192Parser.FLOAT_CONSTANT, CCC20192Parser.STRING_CONSTANT, CCC20192Parser.NULL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.expression()
                pass
            elif token in [CCC20192Parser.NEW]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.allocexpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(CCC20192Parser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(CCC20192Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_printstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintstat" ):
                listener.enterPrintstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintstat" ):
                listener.exitPrintstat(self)




    def printstat(self):

        localctx = CCC20192Parser.PrintstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(CCC20192Parser.PRINT)
            self.state = 123
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(CCC20192Parser.READ, 0)

        def lvalue(self):
            return self.getTypedRuleContext(CCC20192Parser.LvalueContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_readstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadstat" ):
                listener.enterReadstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadstat" ):
                listener.exitReadstat(self)




    def readstat(self):

        localctx = CCC20192Parser.ReadstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_readstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CCC20192Parser.READ)
            self.state = 126
            self.lvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(CCC20192Parser.RETURN, 0)

        def getRuleIndex(self):
            return CCC20192Parser.RULE_returnstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstat" ):
                listener.enterReturnstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstat" ):
                listener.exitReturnstat(self)




    def returnstat(self):

        localctx = CCC20192Parser.ReturnstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(CCC20192Parser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CCC20192Parser.IF, 0)

        def OPENPAR(self):
            return self.getToken(CCC20192Parser.OPENPAR, 0)

        def expression(self):
            return self.getTypedRuleContext(CCC20192Parser.ExpressionContext,0)


        def CLOSEPAR(self):
            return self.getToken(CCC20192Parser.CLOSEPAR, 0)

        def statement(self):
            return self.getTypedRuleContext(CCC20192Parser.StatementContext,0)


        def elsestat(self):
            return self.getTypedRuleContext(CCC20192Parser.ElsestatContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)




    def ifstat(self):

        localctx = CCC20192Parser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(CCC20192Parser.IF)
            self.state = 131
            self.match(CCC20192Parser.OPENPAR)
            self.state = 132
            self.expression()
            self.state = 133
            self.match(CCC20192Parser.CLOSEPAR)
            self.state = 134
            self.statement()
            self.state = 135
            self.elsestat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsestatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CCC20192Parser.ELSE, 0)

        def statement(self):
            return self.getTypedRuleContext(CCC20192Parser.StatementContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_elsestat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsestat" ):
                listener.enterElsestat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsestat" ):
                listener.exitElsestat(self)




    def elsestat(self):

        localctx = CCC20192Parser.ElsestatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elsestat)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CCC20192Parser.ELSE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(CCC20192Parser.ELSE)
                self.state = 138
                self.statement()
                pass
            elif token in [CCC20192Parser.SEMICOLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(CCC20192Parser.FOR, 0)

        def OPENPAR(self):
            return self.getToken(CCC20192Parser.OPENPAR, 0)

        def atribstat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CCC20192Parser.AtribstatContext)
            else:
                return self.getTypedRuleContext(CCC20192Parser.AtribstatContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CCC20192Parser.SEMICOLON)
            else:
                return self.getToken(CCC20192Parser.SEMICOLON, i)

        def expression(self):
            return self.getTypedRuleContext(CCC20192Parser.ExpressionContext,0)


        def CLOSEPAR(self):
            return self.getToken(CCC20192Parser.CLOSEPAR, 0)

        def statement(self):
            return self.getTypedRuleContext(CCC20192Parser.StatementContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_forstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForstat" ):
                listener.enterForstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForstat" ):
                listener.exitForstat(self)




    def forstat(self):

        localctx = CCC20192Parser.ForstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_forstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(CCC20192Parser.FOR)
            self.state = 143
            self.match(CCC20192Parser.OPENPAR)
            self.state = 144
            self.atribstat()
            self.state = 145
            self.match(CCC20192Parser.SEMICOLON)
            self.state = 146
            self.expression()
            self.state = 147
            self.match(CCC20192Parser.SEMICOLON)
            self.state = 148
            self.atribstat()
            self.state = 149
            self.match(CCC20192Parser.CLOSEPAR)
            self.state = 150
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CCC20192Parser.StatementContext,0)


        def statelist1(self):
            return self.getTypedRuleContext(CCC20192Parser.Statelist1Context,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_statelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatelist" ):
                listener.enterStatelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatelist" ):
                listener.exitStatelist(self)




    def statelist(self):

        localctx = CCC20192Parser.StatelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statelist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.statement()
            self.state = 153
            self.statelist1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statelist1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statelist(self):
            return self.getTypedRuleContext(CCC20192Parser.StatelistContext,0)


        def getRuleIndex(self):
            return CCC20192Parser.RULE_statelist1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatelist1" ):
                listener.enterStatelist1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatelist1" ):
                listener.exitStatelist1(self)




    def statelist1(self):
